# tactical-racer

./: .gitignore  CMakeLists.txt  README.md  README.rdoc  classes.rb  main.rb
Assets/Materials/: MainMenuBackground.mat
Assets/Prefabs/: Car03.prefab  Road_Curve.prefab  Road_Narrow.prefab
Assets/Scripts/: BuildMap.cs  NewGameButtonOnClick.cs  NewGameMenuOkOnClick.cs
Assets/_Scenes/: MainMenu.unity  NewGameMenu.unity  TemplateMap.unity  test0.unity
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
cmakeModules/: FindPanda3D.cmake
maps/: map1.map  map2.map
uml/: tactical-racer-uml.uml
