CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME pandatest)
PROJECT(${PROJECT_NAME})
SET(PROJECT_EXE "${PROJECT_NAME}_exe")

SET(VERBOSE "FALSE")

MACRO(PRINT LIBNAME LIBFOLDER)
	IF(VERBOSE)
		MESSAGE(STATUS "Found ${LIBNAME} ${LIBFOLDER}")
	ENDIF()
ENDMACRO()

#Add custom .cmake files located in this folder
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmakeModules")

#Eigen3
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

#Panda3d
FIND_PACKAGE(Panda3D REQUIRED)
INCLUDE_DIRECTORIES(${PANDA3D_INCLUDE_DIR})
LINK_DIRECTORIES(${PANDA3D_LIBS_DIR})
PRINT("Panda3d include:" ${PANDA3D_INCLUDE_DIR})
PRINT("Panda3d lib:" ${PANDA3D_LIBS_DIR})

SET(SOURCE
src/main.cpp
)

SET(HEADERS
)

#Create the executable
ADD_EXECUTABLE(${PROJECT_EXE} ${SOURCE} ${HEADERS}) 

#Panda3d linking
TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${PANDA3D_LIBS})
